--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-site-verification" content="B_iMHtCeBI0LWZ4YHuFfo8kh2bKrJRKC-XdV-iHAfAw" />
 
     <title>Planting Possibilities - Seeds Of Hope</title>
 
