--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             </ul>
             <ul>
                 <li><i class="fa fa-phone" aria-hidden="true"></i><a href="tel:262-749-9404">(262) 749-9404</a></li>
-                <li><i class="fa fa-envelope-o" aria-hidden="true"></i><a href="mailto:jamiejoanbraun@gmail.com" target="_top"> jamiejoanbraun@gmail.com</a></li>
+                <li><i class="fa fa-envelope-o" aria-hidden="true"></i><a href="mailto:info@seedsofhopewi.org" target="_top"> info@seedsofhopewi.org</a></li>
               </ul>
           </div>
         </div>
